--- a/src/app/contents/main-dashboard/main-dashboard.component.html
+++ b/src/app/contents/main-dashboard/main-dashboard.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid background-change">
 	<div class="row">
-		<div class="text-center" style="margin-bottom: 500; margin-top: 50px;">
-			<!-- <div class="card-header" style="letter-spacing: 2px; border-radius: 5px; margin-bottom: 10px; margin-top: 10px;">
+		<div class="text-center" style="margin-bottom: 500; margin-top: 20px;">
+			<div class="card-header" style="letter-spacing: 2px; border-radius: 5px; margin-bottom: 10px;">
 				ENMAN (円満) APPS
-			</div> -->
+			</div>
 			<div class="row">
 				<div class="col">
 					<div class="card">
-						<a href="/enman/aio-kejayan">
+						<a routerLink="/aio-kejayan">
 							<img src="assets\enman-apps\images\kejayan.jpg" alt=""
 								style="height: 280px; width: 350px; border-radius: 5px; margin-bottom: 10px; margin-top: 10px;" />
 							<div class="card-header"
@@ -17,9 +17,9 @@
 						</a>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col" (click)="noFeature()">
 					<div class="card">
-						<a href="/enman/aio-sukabumi">
+						<a>
 							<img src="assets\enman-apps\images\sukabumi.jpg" alt=""
 								style="height: 280px; width: 350px; border-radius: 5px; margin-bottom: 10px; margin-top: 10px;" />
 								<div class="card-header"
@@ -29,9 +29,9 @@
 						</a>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col" (click)="noFeature()">
 					<div class="card">
-						<a href="/enman/otsuka-indonesia">
+						<a>
 							<img src="assets\enman-apps\images\otsuka-indonesia.jpeg" alt=""
 								style="height: 280px; width: 350px; border-radius: 5px; margin-bottom: 10px; margin-top: 10px;" />
 								<div class="card-header"
@@ -43,9 +43,9 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col">
+				<div class="col" (click)="noFeature()">
 					<div class="card">
-						<a href="/enman/widatra-bhakti">
+						<a>
 							<img src="assets\enman-apps\images\widatra.jpeg" alt=""
 								style="height: 280px; width: 350px; border-radius: 5px; margin-bottom: 10px; margin-top: 10px;" />
 								<div class="card-header"
@@ -55,9 +55,9 @@
 						</a>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col" (click)="noFeature()">
 					<div class="card">
-						<a href="/enman/lautan-otsuka-chemical">
+						<a>
 							<img src="assets\enman-apps\images\lautan-otsuka.png" alt=""
 								style="height: 280px; width: 350px; border-radius: 5px; margin-bottom: 10px; margin-top: 10px;" />
 								<div class="card-header"
@@ -67,9 +67,9 @@
 						</a>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col" (click)="noFeature()">
 					<div class="card">
-						<a href="/enman/merapi-utama-pharma">
+						<a>
 							<img src="assets\enman-apps\images\merapi.jpg" alt=""
 								style="height: 280px; width: 350px; border-radius: 5px; margin-bottom: 10px; margin-top: 10px;" />
 								<div class="card-header"
