--- a/src/app/partials/sidebar/sidebar.component.html
+++ b/src/app/partials/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
 					<span class="hide-menu" style="letter-spacing: 2px">Main Menu ENMAN (円満)</span>
 				</li>
 				<li class="sidebar-item">
-					<a class="sidebar-link" routerLink="/" aria-expanded="false">
+					<a class="sidebar-link" routerLink="/dashboard" aria-expanded="false">
 						<span>
 							<i class="ti ti-layout-dashboard"></i>
 						</span>
@@ -32,47 +32,47 @@
 						<span class="hide-menu" style="letter-spacing: 2px">PLANT SECTION</span>
 					</li>
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="/enman-apps/aio-kejayan" aria-expanded="false">
+						<a class="sidebar-link" routerLink="/aio-kejayan" aria-expanded="false">
 							<span>
 								<i class="ti ti-alert-circle"></i>
 							</span>
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. AIO Kejayan</span>
 						</a>
 					</li>
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="/enman-apps/aio-sukabumi" aria-expanded="false">
+					<li class="sidebar-item" (click)="noFeature()">
+						<a class="sidebar-link" aria-expanded="false">
 							<span>
 								<i class="ti ti-alert-circle"></i>
 							</span>
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. AIO Sukabumi</span>
 						</a>
 					</li>
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="/enman-apps/otsuka-indonesia" aria-expanded="false">
+					<li class="sidebar-item" (click)="noFeature()">
+						<a class="sidebar-link" aria-expanded="false">
 							<span>
 								<i class="ti ti-alert-circle"></i>
 							</span>
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. Otsuka Indonesia (OI)</span>
 						</a>
 					</li>
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="/enman-apps/widatra-bhakti" aria-expanded="false">
+					<li class="sidebar-item" (click)="noFeature()">
+						<a class="sidebar-link" aria-expanded="false">
 							<span>
 								<i class="ti ti-alert-circle"></i>
 							</span>
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. Widatra Bhakti (WB)</span>
 						</a>
 					</li>
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="/enman-apps/lautan-otsuka-chemical" aria-expanded="false">
+					<li class="sidebar-item" (click)="noFeature()">
+						<a class="sidebar-link" aria-expanded="false">
 							<span>
 								<i class="ti ti-alert-circle"></i>
 							</span>
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. Lautan Otsuka Chemical</span>
 						</a>
 					</li>
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="/enman-apps/merapi-utama-pharma" aria-expanded="false">
+					<li class="sidebar-item" (click)="noFeature()">
+						<a class="sidebar-link"  aria-expanded="false">
 							<span>
 								<i class="ti ti-alert-circle"></i>
 							</span>
