add content in aio kejayan

--- a/src/app/partials/sidebar/sidebar.component.html
+++ b/src/app/partials/sidebar/sidebar.component.html
@@ -33,49 +33,49 @@
 					</li>
 					<li class="sidebar-item">
 						<a class="sidebar-link" routerLink="/aio-kejayan" aria-expanded="false">
-							<span>
+							<!-- <span>
 								<i class="ti ti-alert-circle"></i>
-							</span>
+							</span> -->
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. AIO Kejayan</span>
 						</a>
 					</li>
 					<li class="sidebar-item" (click)="noFeature()">
 						<a class="sidebar-link" aria-expanded="false">
-							<span>
+							<!-- <span>
 								<i class="ti ti-alert-circle"></i>
-							</span>
+							</span> -->
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. AIO Sukabumi</span>
 						</a>
 					</li>
 					<li class="sidebar-item" (click)="noFeature()">
 						<a class="sidebar-link" aria-expanded="false">
-							<span>
+							<!-- <span>
 								<i class="ti ti-alert-circle"></i>
-							</span>
+							</span> -->
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. Otsuka Indonesia (OI)</span>
 						</a>
 					</li>
 					<li class="sidebar-item" (click)="noFeature()">
 						<a class="sidebar-link" aria-expanded="false">
-							<span>
+							<!-- <span>
 								<i class="ti ti-alert-circle"></i>
-							</span>
+							</span> -->
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. Widatra Bhakti (WB)</span>
 						</a>
 					</li>
 					<li class="sidebar-item" (click)="noFeature()">
 						<a class="sidebar-link" aria-expanded="false">
-							<span>
+							<!-- <span>
 								<i class="ti ti-alert-circle"></i>
-							</span>
+							</span> -->
 							<span class="hide-menu" style="letter-spacing: 0.5px">PT. Lautan Otsuka Chemical</span>
 						</a>
 					</li>
 					<li class="sidebar-item" (click)="noFeature()">
 						<a class="sidebar-link"  aria-expanded="false">
-							<span>
+							<!-- <span>
 								<i class="ti ti-alert-circle"></i>
-							</span>
+							</span> -->
 							<span class="hide-menu" style="letter-spacing: 0.5px;">PT. Merapi Utama Pharma</span>
 						</a>
 					</li>
