add chart about downtime, energy index and cost

--- a/src/app/contents/industry-plant/aio-kejayan/aio-kejayan.component.css
+++ b/src/app/contents/industry-plant/aio-kejayan/aio-kejayan.component.css
@@ -1,6 +1,10 @@
 .background-change {
     background-color: #b3d9ec;
-    height: 900px;
+    border-radius: 10px;
+}
+.background-content {
+    background-color: #cfe8f5;
+    border-radius: 10px;
 }
 .card-header {
     background-color: #ffffff;
