--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -9,7 +9,7 @@
 		</ul>
 		<div class="navbar-collapse justify-content-end px-0" id="navbarNav">
 			<ul class="navbar-nav flex-row ms-auto align-items-center justify-content-end">
-				<a href="#" (click)="refresh()" class="btn btn-primary" style="margin-right: 8px;">
+				<a routerLink="/dashboard" class="btn btn-primary" style="margin-right: 8px;">
 					Main Menu
 				</a>
 				<a (click)="modalSignOut()" class="btn btn-danger">
