--- a/src/app/contents/industry-plant/aio-kejayan/aio-kejayan.component.html
+++ b/src/app/contents/industry-plant/aio-kejayan/aio-kejayan.component.html
@@ -4,47 +4,203 @@
 			<div class="row">
 				<div class="col">
 					<div class="card">
-						<div class="card-header" style="letter-spacing: 1px; border-radius: 5px; text-align: start; font-size: larger;">
+						<div class="card-header"
+							style="letter-spacing: 1px; border-radius: 5px; text-align: center; font-size: 20px; margin-top: 10px;">
 							ENERGY MANAGEMENT AND UTILIZATION DASHBOARD YTD
 						</div>
-						<div class="row">
-							<div class="col">
-								<header class="px-3 py-4">
-									<div class="d-flex align-items-center">
-										<img src="assets/enman-apps/plan-report/botol-pocari.png" width="37"
-											style="margin-left: 5px; display: inline-block; vertical-align: middle;">
-										<h2 class="font-bold text-sm"
-											style="display: inline-block; vertical-align: middle; margin-left: 15px;">
-											<span style="color: #000000; font-size: medium;">Production output <br> (filled bottle)</span><br>
-											<span style="color: black; font-size: large;">{{this.production_output_oc_ytd}}
-												mio</span><br>
-											<div style="display: flex; align-items: center;" class="mb-2 mt-2">
-												<img
-													src="assets/enman-apps/plan-report/{{ this.percent_filled_bottle >= 0 ? 'panah-atas.png' : 'panah-bawah.png' }}"
-													width="11">
-												<h2 class="ml-1" style="font-size: medium;">{{ this.percent_filled_bottle }}% from Last Year
-												</h2>
-											</div>
-										</h2>
+						<img src="assets/enman-apps/images/renewable_energy.jpeg" class="mb-2 rounded-lg mt-2"
+							style="margin-right: 10px; margin-left: 10px; border-radius: 20px;" />
+						<div class="row" style="margin-left: 5px; margin-right: 5px;">
+							<div class="col w-1/2">
+								<div class="bg-white shadow-sm rounded-xl border border-gray-200" style="border-radius: 20px;">
+									<header class="px-3 py-4 border-b border-gray-100">
+										<h4 class="font-semibold text-gray-800">ROOFTOP SOLAR PV1#5.000 Watt 2022</h4>
+									</header>
+									<div class="flex flex-wrap mt-2">
+										<div class="row w-full px-2">
+											<table class="row w-full">
+												<tbody class="text-xs divide-y divide-gray-100" style="margin-left: 20px;">
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">Specification :
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;"></div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ System </div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: On Grid</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Solar Panel
+																Capacity</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 455wp x 14 unit -> 6.370 Wp</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Inverter Capacity
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 5.000 watt </div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Installation Date
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 28 Jan 2022</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Installed by </div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: AIO Team</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Target energy Daily
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 31 kWh/day</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Invesment value
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 75,905,000 IDR</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Cost index </div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 15.282 IDR/Watt</div>
+														</td>
+													</tr>
+												</tbody>
+											</table>
+											<br>
+										</div>
 									</div>
-									<div class="d-flex align-items-center">
-										<img src="assets/enman-apps/plan-report/soyjoy.png" width="55"
-											style="display: inline-block; vertical-align: middle;">
-										<h2 class="font-bold text-sm"
-											style="display: inline-block; vertical-align: middle; margin-left: 10px;">
-											<span style="color: #000000; font-size: large;">Production output <br> (pillow bar)</span><br>
-											<span style="color: black; font-size: larger;">{{this.production_output_fsb_ytd}}
-												mio</span><br>
-											<div style="display: flex; align-items: center;" class="mb-2 mt-2">
-												<img
-													src="assets/enman-apps/plan-report/{{ this.percent_pillow_bar >= 0 ? 'panah-atas.png' : 'panah-bawah.png' }}"
-													width="11">
-												<h2 class="ml-1" style="font-size: large;">{{ this.percent_pillow_bar }}% from Last Year</h2>
-											</div>
-										</h2>
-									</div>
-								</header>
+								</div>
 							</div>
+							<div class="col w-1/2 px-2">
+								<div class="bg-white shadow-sm rounded-xl border border-gray-200" style="border-radius: 20px;">
+									<header class="px-3 py-4 border-b border-gray-100">
+										<h4 class="font-semibold text-gray-800">ROOFTOP SOLAR PV2#10.000 Watt 2023</h4>
+									</header>
+									<div class="flex flex-wrap mt-2">
+										<div class="row w-full">
+											<table class="row w-full">
+												<tbody class="text-xs divide-y divide-gray-100" style="margin-left: 20px;">
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">Specification :
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;"></div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ System </div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: On Grid</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Solar Panel
+																Capacity</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 550wp x 19 unit -> 10.450 Wp</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Inverter Capacity
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 10.000 watt </div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Installation Date
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 23 February 2023 to 11 Mar 2023 (16 Days)</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Installed by </div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: AIO Team</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Target energy Daily
+															</div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 52 kWh/day</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Total Budget </div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 106,750,000 IDR</div>
+														</td>
+													</tr>
+													<tr>
+														<td class="p-2 whitespace-wrap">
+															<div style="font-size: medium; font-weight: 500; text-align: start;">✓ Project Cost
+																intencity </div>
+														</td>
+														<td class="p-2 whitespace-wrap">
+															<div style="text-align: start;">: 10,675 IDR/Watt</div>
+														</td>
+													</tr>
+												</tbody>
+											</table>
+											<br>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
 							<div class="col">
 								<div class="mb-6 mx-auto shadow-color rounded-xl">
 									<header class="px-5 py-4 border-sky-100">
@@ -60,7 +216,8 @@
 													<img
 														src="assets/enman-apps/plan-report/{{ this.percentase_water >= 0 ? 'panah-atas.png' : 'panah-bawah.png' }}"
 														width="11">
-													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_water }}% from Last Year</h2>
+													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_water }}% from Last
+														Year</h2>
 												</div>
 											</h2>
 										</div>
@@ -85,7 +242,8 @@
 													<img
 														src="assets/enman-apps/plan-report/{{ this.percentase_electricity >= 0 ? 'panah-atas.png' : 'panah-bawah.png' }}"
 														width="11">
-													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_electricity }}% from Last Year</h2>
+													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_electricity }}% from
+														Last Year</h2>
 												</div>
 											</h2>
 										</div>
@@ -110,7 +268,8 @@
 													<img
 														src="assets/enman-apps/plan-report/{{ this.percentase_steam >= 0 ? 'panah-atas.png' : 'panah-bawah.png' }}"
 														width="11">
-													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_steam }}% from Last Year</h2>
+													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_steam }}% from Last
+														Year</h2>
 												</div>
 											</h2>
 										</div>
@@ -123,26 +282,13 @@
 						</div>
 						<div class="row">
 							<div class="col">
-								<header class="px-3 py-4">
-									<div style="display: flex; align-items: center; margin-top: 2px;">
-										<img src="assets/enman-apps/plan-report/shape.png" width="33"
-											style="margin-left: 5px; display: inline-block; vertical-align: middle;">
-										<h2 class="font-bold" style="display: inline-block; vertical-align: middle; margin-left: 20px; font-size: large;">
-											<h2 class="font-bold text-black" style="font-size: large;">Big Downtime Utility (minutes)</h2>
-										</h2>
-									</div>
-								</header>
-								<div class="p-3">
-									<canvas id="big_downtime" height="100%" width="50%"></canvas>
-								</div>
-							</div>
-							<div class="col">
 								<div class="mb-6 mx-auto shadow-color rounded-xl">
 									<header class="px-5 py-4 border-sky-100">
 										<div style="display: flex; align-items: center;">
 											<img src="assets/enman-apps/plan-report/energy.png" width="32"
 												style="margin-left: 10px; display: inline-block; vertical-align: middle;">
-											<h2 class="font-bold text-sm" style="display: inline-block; vertical-align: middle; margin-left: 20px;">
+											<h2 class="font-bold text-sm"
+												style="display: inline-block; vertical-align: middle; margin-left: 20px;">
 												<span style="color: #FF8787; font-size: large;">ENERGY </span>
 												<span style="color: black; font-size: large;">INDEX</span>
 												<h2 style="font-size: large;">GJ / KL</h2>
@@ -150,7 +296,8 @@
 													<img
 														src="assets/enman-apps/plan-report/{{ this.percentase_energy >= 0 ? 'panah-atas.png' : 'panah-bawah.png' }}"
 														width="11">
-													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_energy }}% from Last Year</h2>
+													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_energy }}% from Last
+														Year</h2>
 												</div>
 											</h2>
 										</div>
@@ -166,15 +313,17 @@
 										<div style="display: flex; align-items: center;">
 											<img src="assets/enman-apps/plan-report/rupiah.png" width="36	"
 												style="display: inline-block; vertical-align: middle;">
-											<h2 class="font-bold text-sm" style="display: inline-block; vertical-align: middle; margin-left: 10px;">
-												<span style="color: #e29d69; font-size: large;">OC ENERGY </span>
-												<span style="color: black; font-size: large;">COST</span>
+											<h2 class="font-bold text-sm"
+												style="display: inline-block; vertical-align: middle; margin-left: 10px;">
+												<span style="color: #e29d69; font-size: large;">EMISSION </span>
+												<span style="color: black; font-size: large;">(tCO2e)</span>
 												<h2 style="font-size: large;">IDR / Bottle</h2>
 												<div style="display: flex; align-items: center;">
 													<img
 														src="assets/enman-apps/plan-report/{{ this.percentase_oc_energy >= 0 ? 'panah-atas.png' : 'panah-bawah.png' }}"
 														width="11">
-													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_oc_energy }}% from Last Year</h2>
+													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_oc_energy }}% from
+														Last Year</h2>
 												</div>
 											</h2>
 										</div>
@@ -190,15 +339,17 @@
 										<div style="display: flex; align-items: center;">
 											<img src="assets/enman-apps/plan-report/rupiah.png" width="36"
 												style="display: inline-block; vertical-align: middle;">
-											<h2 class="font-bold text-sm" style="display: inline-block; vertical-align: middle; margin-left: 10px;">
-												<span style="color: #b5bb83; font-size: large;">FSB ENERGY </span>
+											<h2 class="font-bold text-sm"
+												style="display: inline-block; vertical-align: middle; margin-left: 10px;">
+												<span style="color: #b5bb83; font-size: large;">TOE </span>
 												<span style="color: black; font-size: large;">COST</span>
 												<h2 style="font-size: large;">IDR / Bar</h2>
 												<div style="display: flex; align-items: center;">
 													<img
 														src="assets/enman-apps/plan-report/{{ this.percentase_fsb_energy >= 0 ? 'panah-atas.png' : 'panah-bawah.png' }}"
 														width="11">
-													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_fsb_energy }}% from Last Year</h2>
+													<h2 class="ml-1 font-bold" style="font-size: large;">{{ this.percentase_fsb_energy }}% from
+														Last Year</h2>
 												</div>
 											</h2>
 										</div>
