--- a/src/app/contents/main-dashboard/main-dashboard.component.html
+++ b/src/app/contents/main-dashboard/main-dashboard.component.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="text-center" style="margin-bottom: 500; margin-top: 20px;">
 			<div class="card-header" style="letter-spacing: 2px; border-radius: 5px; margin-bottom: 10px;">
-				ENMAN (円満) APPS
+				ENMAN (円満) APPS <br> ENGINEERING MANAGEMENT APPLICATION
 			</div>
 			<div class="row">
 				<div class="col">
